--- a/assets/stylesheets/bootstrap/mixins/_forms.scss
+++ b/assets/stylesheets/bootstrap/mixins/_forms.scss
@@ -67,8 +67,8 @@
   }
 
   @include form-validation-state-selector($state) {
-    ~ .#{$state}-feedback,
-    ~ .#{$state}-tooltip {
+    + .#{$state}-feedback,
+    + .#{$state}-tooltip {
       display: block;
     }
   }
@@ -124,8 +124,8 @@
         color: $color;
       }
 
-      ~ .#{$state}-feedback,
-      ~ .#{$state}-tooltip {
+      + .#{$state}-feedback,
+      + .#{$state}-tooltip {
         display: block;
       }
     }
